fixed layout issue. adjusted button sizes

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 .container {
     display: grid;
     grid-template-columns: 30% 30% 10% 30%;
-    grid-template-rows: 50% 10% 40%;
+    grid-template-rows: auto auto;
+    overflow: hidden;
 }
 
 /*Links */
@@ -22,32 +23,45 @@ ul {
 /*Image Carousel */
 .imageSlide {
     display: none;
-    grid-column: 1 / 3;
+    grid-column: span 4;
     grid-row: 1;
+    width: 100%;
+    min-height: 0;
+    max-width: 100%;
 }
 
 .hero-image {
-    display: inline-block;
-    width: 60%;
-    height: 60%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-heading {
+    grid-row: 1;
+    color: hsl(0, 0%, 0%);
 }
 
 .hero-text {
-    display: inline;
-    width: 40%;
-    height: 100%;
+    grid-column: 3;
+    grid-row: 1;
     align-self: center;
-    justify-self: center;
 }
 
 .prev-button {
-    width: 100px;
-    height: 100px;
+    grid-column: 3 / 4;
+    grid-row: 2;
+    position: relative;
+    bottom: 59px;
+    right: 25px;
 }
 
 .next-button {
-    width: 100px;
-    height: 100px;
+    grid-column: 3 / 4;
+    grid-row: 2;
+    margin-left: 50px;
+    position: relative;
+    bottom: 59px;
+    left: 10px;
 }
 
 .fade {
@@ -58,21 +72,27 @@ ul {
 /*Images */
 .about-image-1 {
     grid-column: 1 / 2;
-    grid-row: 3;
+    grid-row: 2;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .about-image-2 {
     grid-column: 4;
-    grid-row: 3;
+    grid-row: 2;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /*Text Settings */
 
 #about-text {
-    align-self: center;
+    grid-column: 2 / 4;
+    grid-row: 2;
     justify-self: center;
+    align-self: center;
 }
 
 /*Nav Bar Settings */
@@ -115,21 +135,11 @@ ul {
     font-size: 16px;
     font-weight: 700;
     letter-spacing: 5px;
-    line-height: px;
+    line-height: 1.2;
     margin-left: 70px;
     margin-right: 70px;
     padding-bottom: 20px;
     text-transform: uppercase;
-}
-
-.heading-body-text {
-    font-family: 'League Spartan';
-    font-size: 12px;
-    font-weight: 500;
-    color: hsl(0, 0%, 63%);
-    margin-left: 150px;
-    margin-right: 110px;
-    padding-bottom: 20px;
 }
 
 .about-body-text {
@@ -142,12 +152,25 @@ ul {
     line-height: 1.2;
 }
 
+.heading-body-text {
+    font-family: 'League Spartan';
+    font-size: 12px;
+    font-weight: 500;
+    color: hsl(0, 0%, 63%);
+    padding-bottom: 20px;
+    margin-left: 150px;
+    margin-right: 50px;
+    line-height: 1.2;
+}
+
 /* Buttons */
 
 .button {
     background-color: transparent;
     outline: none;
     border: none;
+    grid-column: 3;
+    grid-row: 1;
 }
 
 .button-text {
@@ -158,16 +181,7 @@ ul {
     margin-left: 150px;
     margin-right: 10px;
     text-transform: uppercase;
-}
-
-#arrow-button-left {
-    background-color: hsl(0, 0%, 27%);
-    border: none;
-    outline: none;
-}
-
-#arrow-button-right {
-    background-color: hsl(0, 0%, 27%);
-    border: none;
-    outline: none;
+    grid-column: 3;
+    grid-row: 1;
+    color: hsl(0, 0%, 0%);
 }
